--- a/webinar.html
+++ b/webinar.html
@@ -35,16 +35,15 @@
 })(window, document, 'script', 'dataLayer', 'GTM-M6LZL75');</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>
-      「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 |
-      香港
+    <title>立即報名：「綠色和平水手黃懿萱線上分享會」 - Greenpeace 綠色和平 | 香港
     </title>
     <meta name="author" content="Greenpeace 綠色和平">
-    <meta name="description" content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》">
-    <meta property="og:title" content="「地球日環保紀錄片節」開幕紀錄片線上映後座談會 - Greenpeace 綠色和平 | 香港">
+    <meta name="description" content="綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。">
+    <meta property="og:title" content="立即報名：「綠色和平水手黃懿萱線上分享會」 - Greenpeace 綠色和平 |
+      香港">
     <meta property="og:site_name" content="Greenpeace 綠色和平">
-    <meta property="og:description" content="適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港 Facebook 平台免費直播本地紀錄片《白海豚失樂園 Breathing Room》">
-    <meta property="og:image" content="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg">
+    <meta property="og:description" content="綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。">
+    <meta property="og:image" content="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/40a91539-ats_greenpeace_legc_298-%C2%A9-abbie-trayler-smith_greenpeace-2048x1366.jpg">
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="192994240714848">
     <!-- meta tag-->
@@ -53,6 +52,7 @@
     <link rel="stylesheet" href="styles.d9123ae5.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
+
   <body class="antialiased text-gray-900 bg-gray-100 relative flex flex-col items-center font-notohk md:h-screen">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NBV2LPD" height="0" width="0" style="display: none; visibility: hidden;"></iframe></noscript>
@@ -66,7 +66,7 @@
     <![endif]-->
     <!-- Add your site or application content here -->
     <!-- header -->
-    <header class="header header--green">
+    <header class="z-10 header relative w-full px-4 py-2 header--white">
       <div class="container mx-auto flex items-center justify-between">
         <div>
           <img class="logo logo--green" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-green-%5bweb%5d-01.png" alt="logo">
@@ -83,90 +83,125 @@
         <div class="flex flex-wrap">
           <div class="w-full md:w-1/2 lg:w-2/3">
             <div class="cover-image relative">
-              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/20200416-earth-day-promotion.jpg" alt="">
+              <img class="w-full" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/05/2c64b8f6-screen-shot-2020-05-26-at-18.06.07.png" alt="立即報名：「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會">
             </div>
-            <div class="px-4">
+            <div class="px-4 py-4 mb-8">
               <div class="flex flex-wrap justify-between">
                 <div class="mt-8">
                   <h1 class="text-4xl font-bold">
-                    地球日環保紀錄片節
-                    <p class="text-2xl mt-2 text-gray-700">
-                      開幕紀錄片線上放映暨映後座談會
+                    立即報名：「綠色和平水手黃懿萱線上分享會」
+                    <p class="text-2xl mt-2 text-gray-500">
+                      帶您參觀船上設備、船員日常生活；並與您即時對話介紹守護海洋工作
                     </p>
                   </h1>
                 </div>
               </div>
               <div class="line"></div>
               <p class="text">
-                適逢4月22日是「世界地球日」50周年，綠色和平將舉辦「地球日環保紀錄片節」，嚴選五齣與氣候危機、環境破壞相關的紀錄片，並於地球日當日在綠色和平香港
-                Facebook 平台免費直播本地紀錄片<strong>《白海豚失樂園 Breathing Room》</strong>作開幕紀錄片。
+                綠色和平將舉辦「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會，邀請到現正在船艦「極地曙光號」工作的水手黃懿萱（又名小豚），於船上直播，帶您參觀船上設備、船員日常生活；並與您即時對話，分享多年隨船協助研究和行動的經歷、在海上工作的趣事、為何如此熱衷守護海洋等等。
               </p>
               <p class="text">
-                <strong>
-                  我們更有幸邀請到氣象學家、香港天文台前助理台長梁榮武、開幕紀錄片導演黃遂心及香港年輕氣候行動者劉衍一
-                  （Lance
-                  Lau）出席線上映後座談會，與您即時對話，討論填海對海洋生態的影響、保育與發展如何取得平衡。</strong>
+                在一年一度的國際海洋日，誠懇您線上參觀歷盡風浪的船艦「極地曙光號」，了解在前線工作船員的日常，一起關心海洋！
               </p>
               <p class="text">
-                綠色和平<strong>「地球日環保紀錄片節」</strong>開幕紀錄片分享會及映後座談會
-                * 詳情：
+                <strong>「綠色和平水手黃懿萱：帶您參觀極地曙光號、介紹守護海洋工作」線上分享會詳情：</strong>
               </p>
-              <div class="event-details my-8 bg-white">
-                <table class="table-auto">
+              <div class="event-details mt-4 mb-8">
+                <table class="bg-white rounded border table-fixed w-full">
+                  <thead>
+                    <tr>
+                      <th class="w-1/4"></th>
+                      <th class="w-3/4"></th>
+                      </tr>
+                    
+                  </thead>
                   <tbody>
                     <tr>
                       <td class="border px-4 py-4">
-                        <strong>日期：</strong> 2020年4月22日（世界地球日）
+                        <strong>日期：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        2020年6月8日（星期日）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>映後座談會平台：</strong> Google Hangouts
-                        Meet（網上登記後會獲得相關鏈結）
+                        <strong>時間：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        線上參觀船艦「極地曙光號」 - 下午時至時<br>
+                        與XXX即席交流 - 下午時至時半
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>嘉賓：</strong>
-                        氣象學家、香港天文台前助理台長梁榮武；《白海豚失樂園
-                        Breathing
-                        Room》導演黃遂心及香港年輕氣候行動者劉衍一（Lance Lau）
+                        <strong>線上分享會平台：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        Zoom（網上登記後會獲得相關鏈結和密碼）
                       </td>
                     </tr>
                     <tr class="">
                       <td class="border px-4 py-4">
-                        <strong>時間：</strong> 晚上7:45 - 8:30
+                        <strong>黃懿萱背景：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        <p class="text">
+                          2011年首次在彩虹勇士號擔任廚師助理，雖名為水手，實際是翻譯、裁縫、工匠、行動者一手包辦，更擅長操作精密科學儀器！
+                        </p>
+                        <p class="text">
+                          曾參與追查非法漁船、攀登鑽油台行動、親身拯救日本儒艮及台灣瓶鼻海豚，最近完成南極研究航程。
+                        </p>
                       </td>
                     </tr>
-                  </tbody>
+                    <tr class="">
+                      <td class="border px-4 py-4">
+                        <strong>注意事項：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        是次分享將以普通話和英語進行
+                      </td>
+                    </tr>
+                    <!--
+                    <tr class="">
+                      <td class="border px-4 py-4">
+                        <strong>星級大廚：</strong>
+                      </td>
+                      <td class="border px-4 py-4">
+                        <div class="speaker mt-4">
+                          <img
+                            class="speaker__avatar h-40 w-40"
+                            src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/fc867f91-cooking_leung_square.jpg"
+                            alt="梁祖堯"
+                          />
+                          <div class="px-4 py-4">
+                            <h3>黃懿萱背景：</h3>
+                            <span class="text-sm text-gray-700"
+                              >煮食兼綠色生活達人</span
+                            >
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                  --></tbody>
                 </table>
               </div>
-              <p class="text mb-8">
-                <a class="underline font-bold" data-scroll="" href="#form-container">立即報名</a>參加「地球日環保紀錄片節」開幕紀錄片映後座談會，與三位嘉賓即席對談，<strong>名額僅限250個!</strong>
-              </p>
-              <div class="speakers">
-                <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/ce98c922-daphnewong.jpg" alt="黃遂心 Daphne">
-                  <div class="px-6 py-4">
-                    <h3>黃遂心 Daphne</h3>
-                    <span class="text-sm text-gray-700">紀錄片導演</span>
-                  </div>
+              <hr>
+              <div class="row">
+                <div class="col-xs-12 col-md-8 mb-4">
+                  <img src="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/40a91539-ats_greenpeace_legc_298-%C2%A9-abbie-trayler-smith_greenpeace-2048x1366.jpg" alt="調查工作之一，就是乘坐橡皮艇到南極冰山周遭採集海水樣本。 © Abbie Trayler-Smith / Greenpeace">
+                  <span class="credit-line">調查工作之一，就是乘坐橡皮艇到南極冰山周遭採集海水樣本。 ©
+                    Abbie Trayler-Smith / Greenpeace</span>
                 </div>
-                <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/90e7454b-leung_pic.jpg" alt="梁榮武">
-                  <div class="px-6 py-4">
-                    <h3>梁榮武</h3>
-                    <span class="text-sm text-gray-700">氣象學家<br>
-                      香港天文台前助理台長
-                    </span>
-                  </div>
+                <div class="col-xs-12 col-md-8 col-md-offset-4 mb-8">
+                  <img src="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/4e1de138-gp0stp54s_medium_res.jpg" alt="小豚 2015 年登上極地曙光號，於北海參與漁業行動 。 © Pablo Blazquez / Greenpeace">
+                  <span class="credit-line">小豚 2015 年登上極地曙光號，於北海參與漁業行動 。 © Pablo
+                    Blazquez / Greenpeace</span>
                 </div>
-                <div class="speaker">
-                  <img class="speaker__avatar" src="https://storage.googleapis.com/planet4-hongkong-stateless/2020/04/afd8cb67-lance02.jpg" alt="劉衍一 Lance Lau">
-                  <div class="px-6 py-4">
-                    <h3>劉衍一 Lance Lau</h3>
-                    <span class="text-sm text-gray-700">香港年輕氣候行動者</span>
-                  </div>
+                <div class="col-xs-12 col-md-8">
+                  <img src="https://storage.googleapis.com/planet4-taiwan-stateless/2020/05/6e84ddbd-%E5%B0%8F%E8%B1%9A%E6%89%8B%E7%B9%AA%E5%8D%A1%E7%89%87-%C2%A9-yei-hsuan-huang-_-greenpeace.jpeg" alt="頰帶企鵝形單影隻看海一剎那，小豚以手繪卡片記錄下來。 © Yei Hsuan Huang / Greenpeace">
+                  <span class="credit-line">頰帶企鵝形單影隻看海一剎那，小豚以手繪卡片記錄下來。 © Yei
+                    Hsuan Huang / Greenpeace</span>
                 </div>
               </div>
             </div>
@@ -175,8 +210,8 @@
             <div class="sticky top-0 self-center px-4 pb-8" style="top: 20px;">
               <div class="px-4 py-8 border bg-white rounded shadow-md overflow-hidden form-container" id="form-container">
                 <div class="form-header">
-                  <p class="text-sm">
-                    立即報名「地球日環保紀錄片節」開幕紀錄片線上映後座談會
+                  <p class="text-md">
+                    立即報名<br>「綠色和平水手黃懿萱線上分享會」
                   </p>
                 </div>
                 <!-- EN form -->
@@ -220,11 +255,9 @@
                           </div>
                         </div>
                         <input type="hidden" class="en__field__input en__field__input--hidden" name="supporter.NOT_TAGGED_46" value="HK">
-
                         <input type="hidden" class="en__field__input en__field__input--hidden" name="supporter.NOT_TAGGED_9" value="zh">
-
                         <div class="en__submit">
-                          <button style="" class="btn btn-block btn-round btn--download">
+                          <button class="btn btn-block btn-round btn--download">
                             立即登記
                           </button>
                         </div>
@@ -240,8 +273,8 @@
               </div>
               <div class="my-8">
                 <span class="text-sm">*
-                  映後座談會將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與嘉賓對談，請務必網上登記，以獲取
-                  Google Hangouts Meet 鏈結。</span>
+                  煮食教室將同步在綠色和平Facebook專頁上直播，但不設對答環節；如欲參與導師對談，請務必網上登記，以獲取
+                  Zoom 鏈結。</span>
               </div>
             </div>
           </div>
@@ -250,22 +283,26 @@
     </main>
     <!-- end of main -->
     <!-- footer -->
-    <footer class="footer">
+    <footer class="z-10 footer relative w-full px-4 py-12 bg-gpdarkblue text-white text-sm">
       <div class="container mx-auto">
         <div class="flex flex-wrap">
-          <div class="w-full md:w-1/2">
-            <img class="logo mb-4" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png" alt="Greenpeace 綠色和平">
+          <div class="w-full md:w-1/2 mb-8">
+            <img class="logo mb-8" src="https://api.greenpeace.org.hk/general/logo/GP-logo-2019-TC-white-%5bweb%5d-01.png" alt="Greenpeace 綠色和平">
             <p class="text-sm">
               綠色和平是獨立的國際環保組織，通過科學研究、政策倡議及和平行動，揭露全球環境問題並提出相應解決方案。我們從不接受任何政府、企業或政治團體的資助，只接受個人的直接捐款，以維持公正獨立。
             </p>
-            <div class="font-bold text-sm my-8">
-              © GREENPEACE 2020
-            </div>
           </div>
-          <div class="w-full md:w-1/2">
-            <ul class="footer-links">
-              <a target="_blank" rel="noopener noreferrer" href="http://www.greenpeace.org/hongkong/" alt="主頁">主頁</a><a target="_blank" rel="noopener noreferrer" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" alt="私隱政策與個人資料收集聲明">私隱政策與個人資料收集聲明</a><a target="_blank" rel="noopener noreferrer" href="http://www.greenpeace.org/hk/about/contact/" alt="聯絡我們">聯絡我們</a><a target="_blank" rel="noopener noreferrer" href="https://www.greenpeace.org/hongkong/about/overview/" alt="關於綠色和平">關於綠色和平</a>
+          <div class="w-full md:w-1/2 mb-8">
+            <ul class="footer-links leading-loose flex flex-col justify-between items-start md:items-end text-right list-none list-inside">
+              <a target="_blank" rel="noopener noreferrer" href="http://www.greenpeace.org/hongkong/" alt="主頁">主頁</a>
+              <a target="_blank" rel="noopener noreferrer" href="https://www.greenpeace.org/hongkong/policies/privacy-and-cookies/" alt="私隱政策與個人資料收集聲明">私隱政策與個人資料收集聲明</a>
+              <a target="_blank" rel="noopener noreferrer" href="http://www.greenpeace.org/hk/about/contact/" alt="聯絡我們">聯絡我們</a>
+              <a target="_blank" rel="noopener noreferrer" href="https://www.greenpeace.org/hongkong/about/overview/" alt="關於綠色和平">關於綠色和平</a>
             </ul>
+          </div>
+          <div class="w-full mb-8">
+            <div class="border-t border-gray-400 px-4"></div>
+            <div class="text-sm mt-4">© GREENPEACE 2020</div>
           </div>
         </div>
       </div>
